[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Backgrounds/BGLayer2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Backgrounds/BGLayer3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Backgrounds/BGLayer4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Backgrounds/BgW1.png" type="Texture" id=4]
[ext_resource path="res://WIP/Background.gd" type="Script" id=5]

[node name="Background" type="Node2D"]
z_index = -10
script = ExtResource( 5 )

[node name="Layer1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -15
texture = ExtResource( 4 )
centered = false

[node name="Layer2a" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Layer2b" type="Sprite" parent="."]
position = Vector2( -1024, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Layer3a" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Layer3b" type="Sprite" parent="."]
position = Vector2( -1024, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Layer4a" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Layer4b" type="Sprite" parent="."]
position = Vector2( -1024, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
